--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,3 @@
-<h1>{{ title }}</h1>
-<p>Welcome to {{ title }}</p>
 
 <!DOCTYPE html>
 <html>
@@ -10,19 +8,19 @@
     </head>
     <body>
 
-        <div class="jumbotron">
-            <h1>Beautiful Crypto</h1>
+        <div class="jumbotron" id="jumbotronDiv">
+            <h1 id="jumbotron">Beautiful Crypto</h1>
             <p>Data Visualization of Cryptocurrency Markets</p>
         </div>
 
-        <h3>Charts using CoinMarketCap API</h3>
-        <ul>
-            <li><a href="/coinMarketPie.html">Market Cap Pie Chart</a></li>
-            <li><a href="/marketCapBubble.html">Market Cap Bubble Chart</a></li>
-            <li><a href="/top10marketcaps.html">Top 10 Market Caps</a></li>
-            <li><a href="/marketBarChart.html">Market Cap Bar Chart</a></li>
-            <li><a href="/bitcoinPriceHistory.html">History of Bitcoin price</a></li>
 
-        </ul>
+        <div class="list-group" id="mainPageListGroup">
+            <a href="/coinMarketPie" class="list-group-item">Pie Chart of Coin Market Caps</a>
+            <a href="/marketCapBubble" class="list-group-item">Bubble Chart of Coin Market Caps</a>
+            <a href="/top10marketcaps" class="list-group-item">Top 10 Market Caps</a>
+            <a href="/marketBarChart" class="list-group-item">Market Cap Bar Chart</a>
+            <a href="/bitcoinPriceHistory" class="list-group-item">History of Bitcoin Price</a>
+        </div>
+
     </body>
 </html>
